@@ -1,3 +1,8 @@
+2001-10-19  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: add the Ximian gtop icon as default window
+	icon
+
 2001-10-18  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procactions.c: fix the crash. The tree was being updated
